# TrueTraceRust

./: Cargo.toml  Cross.toml  build-shell.nix  build.rs
.cargo/: config.toml
dotnet/: ComputeShader.g.cs  NativeMethods.g.cs
src/: common_vars.bak  common_vars.rs  compute_shader_interop.rs  hook.rs  lib.rs  ray_tracing_object.bak  render.rs  shaders.rs
src/shaders/: GlobalDefines.cginc
src/shaders/Utility/: BVHRefitter.compute  CopyTextureShader.compute  GeneralMeshFunctions.compute
src/shaders/Utility/Atmosphere/: AtmosphereSampling.cginc
src/shaders/Utility/BVHRefitter/: BLASLightRefitKernel.spv  BLASSGTreeRefitKernel.spv  Construct.spv  RefitBVHLayer.spv  RefitLayer.spv  TLASLightBVHRefitKernel.spv  TLASSGTreeRefitKernel.spv  TransferKernel.spv  UpdateGlobalBufferAABBKernel.spv
src/shaders/Utility/CopyTextureShader/: BC4Kernel.spv  BC5Kernel.spv  Compress.spv  FullKernel.spv  FullKernelSplit.spv  HeightmapCompressKernel.spv  NormalMapKernel.spv  SingleChannelKernel.spv
src/shaders/Utility/GeneralMeshFunctions/: CombineLightBuffers.spv  CombineLightNodes.spv  CombineNodeBuffers.spv  CombineSGTreeNodes.spv  CombineTriBuffers.spv
src/shaders/main/: CommonData.cginc  CommonStructs.cginc  Materials.cginc  RayTracingShader.compute  ReSTIRGI.compute
src/shaders/main/IntersectionKernels/: common.cginc  kernel_heightmap.compute  kernel_heightmap.spv  kernel_shadow.compute  kernel_shadow.spv  kernel_shadow_heightmap.compute  kernel_shadow_heightmap.spv  kernel_trace.compute  kernel_trace.spv
src/shaders/main/RayGenKernels/: CacheCompact.spv  CacheResolve.spv  (+2 more)
(+12 files in other folders)
